test/integration/bad/data_index/non_data_index12.stan
parameters {
  array[3] real y;

}
transformed parameters {
  cholesky_factor_corr[size(y)] z;
}
